<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/chkProceedToDrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/goHome" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:onClick="cmdHomeClicked"
        android:text="@string/arrivedSafe" />
    
    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_large"
        android:gravity="center_horizontal"
        android:text="@string/locationUnknown" 
        android:visibility="invisible"/>

</LinearLayout>